syntax = "proto3";

package tutorial;

option java_package = "proto";
option java_outer_classname = "UpdateLeaderInfo";

message UpdateLeaderInfoDetails {
  int32 messageId = 1;
  string senderType = 2;
  string brokerName = 3;
  string brokerId = 4;
  string brokerIP = 5;
  int32 brokerPort = 6;
}